--- a/en-GB.plg_system_mojoomdisclaimer.ini
+++ b/en-GB.plg_system_mojoomdisclaimer.ini
@@ -26,26 +26,23 @@ PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_JQUERY = "<h4>Appel de jQuery</h4>
 	
 PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_CONTACT = "<h4>Contact & Support</h4><p>Pour toutes demandes d'adaptation ou personnalisation du plugin, ou pour toutes autres demandes de prestation, merci de me contacter par email à l'adresse : <a href="mailto:contact@mo-web-creation.com">contact@mo-web-creation.com</a>.</p><p>Pour toutes demandes de support, merci d'utiliser exclusivement le répertoire Github de l'extension : <a href="https://github.com/MOWebCreation/Joomla-MOJoomDisclaimer">https://github.com/MOWebCreation/Joomla-MOJoomDisclaimer</a>. Toutes les demandes de support transmises en dehors de ce context seront ignorées, merci de votre compréhension."
 
-PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK = "Entrer sur le site"
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK = "Quitter le site"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK = "Enter on the webiste"
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK = "Leave the website"
 
-PLG_SYSTEM_MOJOOMDISCLAIMER_NO = "Non"
-PLG_SYSTEM_MOJOOMDISCLAIMER_YES = "Oui"
-PLG_SYSTEM_MOJOOMDISCLAIMER_PARAMS = "Paramètres du plugin"
-PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_LABEL = "Contenu du disclaimer"
-PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_DESC = "Utiliser l'éditeur c-dessous pour définir le contenu du disclaimer."
-PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_LABEL = "Appel de jQuery"
-PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_DESC = "Chargement de jQuery. Cette fonction permet de désactiver le chargement de jQuery."
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_LABEL = "Type d'affichage"
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_DESC = "Définir si le contenu est affiché dans une popup modal ou si l'utilisateur est redirigé vers une autre page."
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_MODAL = "Contenu affiché dans une modal"
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_REDIRECT = "Redirection de l'utilisateur vers une page disclaimer"
-PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK_LABEL = "Texte du lien d'entrer"
-PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK_DESC = "Définir le texte du lien d'entrer. Utiliser la surcharge de langue de Joomla! pour rendre les liens multilingues."
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK_LABEL = "Texte du lien de sortie"
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK_DESC = "Définir le texte du lien de sortie. Utiliser la surcharge de langue de Joomla! pour rendre les liens multilingues."
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_LABEL = "Redirection des robots"
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_DESC = "Si vous choisissez la méthode de la redirection plutôt que d'afficher le disclaimer dans une pop-ip modal, cette fonctionnalité vous permet de désactiver la redirection si la méthode ''isRobot()'' de l'API Joomla! détecte un robot d'exploration envoyé par un moteur de recherche. Activation conseillée pour garantir le référencement du site."  
+PLG_SYSTEM_MOJOOMDISCLAIMER_NO = "No"
+PLG_SYSTEM_MOJOOMDISCLAIMER_YES = "Yes"
+PLG_SYSTEM_MOJOOMDISCLAIMER_PARAMS = "Plugin main params"
+PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_LABEL = "Disclaimer content"
+PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_DESC = "Use the following editor for define the content of the disclaimer."
+PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_LABEL = "jQuery loading"
+PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_DESC = "If this function is disabled jQuery will not be loaded by the plugin."
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_LABEL = "Display type"
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_DESC = "Define if the content is displayed in a modal box or if the user is reidrected on another page."
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_MODAL = "Disclaimer loaded in modal box"
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_REDIRECT = "User redirected on disclaimer page"
+
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_LABEL = "Bots redirect"
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_DESC = "If you choose the redirect method this functionnality give you the possibility to disable the redirection if Joomla! detect a search engine crawler. Activation advised to ensure good SEO."  
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_LABEL = "Modal responsive"
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_DESC = "Si cette fonction est activée et que le contenu s'affiche dans une popup modal, celle-ci sera redimensionnée automatiquement en fonction de la taille de l'écran de l'utilisateur."
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_LABEL = "Opacité de l'overlay de la modal"
