--- a/en-GB.plg_system_mojoomdisclaimer.ini
+++ b/en-GB.plg_system_mojoomdisclaimer.ini
@@ -15,7 +15,7 @@ PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_TAG = "<h4>Comment appeller le disclaimer dans
 	
 PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_LINKS = "<h4>Comment modifier le texte du lien d'entrer et le texte du lien de sortie ?</h4><p>Les textes des liens 'Entrer sur le site' et 'Quitter sur le site' sont définies dans le fichier de langue par défaut.<br />Pour modifier proprement le texte des liens il suffit de substituer les chaines de traduction PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK (pour le lien d'entrer) et PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK (pour le lien de sortie). Si vous ne savez pas comment procèder référez vous au manuel d'utilisation de Joomla!.</p>"
 	
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_JQUERY = "<h4>Appel de jQuery</h4>
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_JQUERY = "<h4>jQuery calling</h4>
 	<p>Chargement de jQuery. Cette fonction vous permet de désactiver le chargement de jQuery.<br />
 	ATTENTION : que ce soit en mode 'modal' ou en mode 'redirection', le framework javascript jQuery doit être impérativement chargé, sans quoi le plugin ne sera pas fonctionnel. Vous pouvez désactivez le chargement de jQuery si vous appelez le framework par vos propres moyens.<br />
 	<u>Pour infos :</u> 
@@ -44,10 +44,10 @@ PLG_SYSTEM_MOJOOMDISCLAIMTYPE_REDIRECT = "User redirected on disclaimer page"
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_LABEL = "Bots redirect"
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_DESC = "If you choose the redirect method this functionnality give you the possibility to disable the redirection if Joomla! detect a search engine crawler. Activation advised to ensure good SEO."  
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_LABEL = "Modal responsive"
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_DESC = "Si cette fonction est activée et que le contenu s'affiche dans une popup modal, celle-ci sera redimensionnée automatiquement en fonction de la taille de l'écran de l'utilisateur."
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_LABEL = "Opacité de l'overlay de la modal"
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_DESC = "If this feature is enabled and the contents are displayed in a modal popup, it will be automatically resized according to the screen size of the user."
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_LABEL = "Opacity of the modal overlay"
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_DESC = "Si le contenu s'affiche dans une popup modal, ce champs permet de définir l'opacité de la couche qui se trouve entre la popup modal et la page. Définir une opacité à 100% pour cacher la page."
-PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_LABEL = "Page de redirection Disclaimer"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_LABEL = "Disclaimer redirection"
 PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_DESC = "Si vous choisisez de rediriger l'utilisateur vers une autre page plutôt que d'afficher le contenu dans la modal, sélectionnez le lien de menu vers lequel l'utilisateur sera redirigé."
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_LABEL = "URL du lien d'entrée"
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_DESC = "Par défaut l'utilisateur est redirigé vers la page sur laquelle il se trouve ou sur la page sur laquelle il est arrivé. Vous pouvez choisir de rediriger l'utilisateur vers un lien de menu spécifique lorsqu'il clique sur le lien d'entrer."
@@ -57,16 +57,16 @@ PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_LABEL = "Page de redirection lien d'Entr
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_DESC = "Lien de menu spécifique vers lequel l'utilisateur sera redirigé si il décide d'entrer sur le site. PAR DEFAUT : page d'accueil du site."
 PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_LABEL = "URL du lien de sortie"
 PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_DESC = "Adresse URL vers laquelle l'utilisateur sera redirigé si il quitte le site. PAR DEFAUT : www.google.com"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_LABEL = "Assignation à..."
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_LABEL = "Assignation to..."
 PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_DESC = "Définir les liens de menu concernés par le disclaimer"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ALL = "Sur toutes les pages"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_NONE = "Aucune page"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ONLYSELECTED = "Seulement les liens sélectionnées"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_UNSELECTED = "Toutes les pages sauf les liens sélectionnés"
-PLG_SYSTEM_MOJOOMDISCLAIMER_ASSIGNMENT_EXPAND = "Étendre"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ALL = "All the pages"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_NONE = "No one page"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ONLYSELECTED = "Only the selected pages"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_UNSELECTED = "All pages except selected"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ASSIGNMENT_EXPAND = "Extend"
 PLG_SYSTEM_MOJOOMDISCLAIMER_ERROR_ASKINK_LINK = "Vous n'avez pas renseigné le lien de menu vers lequel l'utilisateur doit être redirigé. Utilisez le formulaire d'administration du plugin pour définir le lien de menu ou affichez le disclaimer dans une pop-up modal."
 PLG_SYSTEM_MOJOOMDISCLAIMER_ERROR_NOT_ACTIVED = "Vous devez activer le plugin afin de pouvoir configurer l'enssemble des fonctionnalités."
 
-COM_PLUGINS_MO_MAIN_PARAMS_FIELDSET_LABEL = "Paramètres généraux"
-COM_PLUGINS_MO_CONTENT_PARAMS_FIELDSET_LABEL = "Contenu du disclaimer"
-COM_PLUGINS_MO_ASSIGNMENT_PARAMS_FIELDSET_LABEL = "Assignation des liens de menu"
+COM_PLUGINS_MO_MAIN_PARAMS_FIELDSET_LABEL = "Main params"
+COM_PLUGINS_MO_CONTENT_PARAMS_FIELDSET_LABEL = "Disclaimer content"
+COM_PLUGINS_MO_ASSIGNMENT_PARAMS_FIELDSET_LABEL = "Menu links assignation"
