--- a/en-GB.plg_system_mojoomdisclaimer.ini
+++ b/en-GB.plg_system_mojoomdisclaimer.ini
@@ -11,7 +11,7 @@ PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_DISPLAY = "<h4>Deux types d'affichage</h4>
 	
 PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_CONTENT = "<h4>Contenu du message d'avertissement</h4><p>Pour définir le message d'avertissement, utilisez l'éditeur mis à disposition dans l'onglet 'Contenu du disclaimer'.</p>"
 
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_TAG = "<h4>Comment appeller le disclaimer dans une page ?</h4><p>Si vous utilisez la méthode de redirection, le contenu du lien de menu vers lequel l'utilisateur est redirigé devra impérativement contenir le tag {MODisclaimerDisplay}, sans quoi le disclaimer ne sera pas affiché.</p>"
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_TAG = "<h4>How to display the disclaimer content in a page ?</h4><p>Si vous utilisez la méthode de redirection, le contenu du lien de menu vers lequel l'utilisateur est redirigé devra impérativement contenir le tag {MODisclaimerDisplay}, sans quoi le disclaimer ne sera pas affiché.</p>"
 	
 PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_LINKS = "<h4>Comment modifier le texte du lien d'entrer et le texte du lien de sortie ?</h4><p>Les textes des liens 'Entrer sur le site' et 'Quitter sur le site' sont définies dans le fichier de langue par défaut.<br />Pour modifier proprement le texte des liens il suffit de substituer les chaines de traduction PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK (pour le lien d'entrer) et PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK (pour le lien de sortie). Si vous ne savez pas comment procèder référez vous au manuel d'utilisation de Joomla!.</p>"
 	
@@ -46,7 +46,7 @@ PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_DESC = "If you choose the redirect met
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_LABEL = "Modal responsive"
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_DESC = "If this feature is enabled and the contents are displayed in a modal popup, it will be automatically resized according to the screen size of the user."
 PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_LABEL = "Opacity of the modal overlay"
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_DESC = "Si le contenu s'affiche dans une popup modal, ce champs permet de définir l'opacité de la couche qui se trouve entre la popup modal et la page. Définir une opacité à 100% pour cacher la page."
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_DESC = "If the content is displayed in a modal pop-up, this field give you the possibility to define the opacity of the overlay placed between the modal and the page. Define the value at 100% forr hide the page content."
 PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_LABEL = "Disclaimer redirection"
 PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_DESC = "Si vous choisisez de rediriger l'utilisateur vers une autre page plutôt que d'afficher le contenu dans la modal, sélectionnez le lien de menu vers lequel l'utilisateur sera redirigé."
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_LABEL = "URL du lien d'entrée"
@@ -55,7 +55,7 @@ PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_SAME = "Redirection vers la page d'
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_OTHER = "Redirection vers un autre lien de menu"
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_LABEL = "Page de redirection lien d'Entrée"
 PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_DESC = "Lien de menu spécifique vers lequel l'utilisateur sera redirigé si il décide d'entrer sur le site. PAR DEFAUT : page d'accueil du site."
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_LABEL = "URL du lien de sortie"
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_LABEL = "Exiting link URL"
 PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_DESC = "Adresse URL vers laquelle l'utilisateur sera redirigé si il quitte le site. PAR DEFAUT : www.google.com"
 PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_LABEL = "Assignation to..."
 PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_DESC = "Définir les liens de menu concernés par le disclaimer"
