--- a/en-GB.plg_system_mojoomdisclaimer.ini
+++ b/en-GB.plg_system_mojoomdisclaimer.ini
@@ -1,72 +1,75 @@
 MOJOOMDISCLAIMER = "MO'JoomDisclaimer"
 PLG_SYSTEM_MOJOOMDISCLAIMER_TITLE = "MO'JoomDisclaimer"
-PLG_SYSTEM_MOJOOMDISCLAIMER_DESC = "MO'JoomDisclaimer est un plugin Joomla! permettant de soumettre un contenu d'avertissement (disclaimer) à un utilisateur lors de son arrivé sur une des pages de votre site. Merci de consulter le fichier 'read.me' présent dans le package d'installation."
-PLG_SYSTEM_MOJOOMDISCLAIMER_LICENCE = "Merci de consulter le fichier read.me présent dans le package d'installation."
+PLG_SYSTEM_MOJOOMDISCLAIMER_DESC = "MO'JoomDisclaimer is a Joomla plugin! which displays a warning content (Disclaimer) to a user when he arrives on a page of your site. Please consult the file 'read.me' located in the installation package."
+PLG_SYSTEM_MOJOOMDISCLAIMER_LICENCE = "Please consult the file 'read.me' located in the installation package."
 
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_DISPLAY = "<h4>Deux types d'affichage</h4>
-	<p>Il y a deux manières d'utiliser le plugin :<br />
-	- en affichant le disclaimer dans une pop-up modal : le système de pop-up Joomla sera automatiquement appelé dès que la page est chargée;<br />
-	- en redirigeant l'utilisateur vers une page contenant le disclaimer;<br />
-	Utiliser le champs 'Type d'affichage' pour configurer la manière dont est appelé le plugin.</p>"
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_DISPLAY = "<h4>Two Types Display</h4>
+	<p>There are two ways to use the plugin :<br />
+	- displaying the disclaimer in a modal pop-up: the Joomla pop-up system will be called automatically when the page is loaded;<br />
+	- by redirecting the user to a page containing the disclaimer;<br />
+	Use the field 'Display Type' to configure how the plugin is called.</p>"
 	
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_CONTENT = "<h4>Contenu du message d'avertissement</h4><p>Pour définir le message d'avertissement, utilisez l'éditeur mis à disposition dans l'onglet 'Contenu du disclaimer'.</p>"
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_CONTENT = "<h4>Content warning</h4><p>To set the warning message, use the editor available in the 'Content Disclaimer' tab.</p>"
 
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_TAG = "<h4>How to display the disclaimer content in a page ?</h4><p>Si vous utilisez la méthode de redirection, le contenu du lien de menu vers lequel l'utilisateur est redirigé devra impérativement contenir le tag {MODisclaimerDisplay}, sans quoi le disclaimer ne sera pas affiché.</p>"
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_TAG = "<h4>How to call the disclaimer on a page?</h4><p>If you use redirection method, the contents of the menu link to which the user is redirected will need to contain the tag {MODisclaimerDisplay}, otherwise the disclaimer will not be displayed.</p>"
 	
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_LINKS = "<h4>Comment modifier le texte du lien d'entrer et le texte du lien de sortie ?</h4><p>Les textes des liens 'Entrer sur le site' et 'Quitter sur le site' sont définies dans le fichier de langue par défaut.<br />Pour modifier proprement le texte des liens il suffit de substituer les chaines de traduction PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK (pour le lien d'entrer) et PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK (pour le lien de sortie). Si vous ne savez pas comment procèder référez vous au manuel d'utilisation de Joomla!.</p>"
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_LINKS = "<h4>How to change the enter and exit link text?</h4><p>The text links 'Enter site' and 'Quit' are defined in the language file by default. <br /> To change link text itself simply override the language values, PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK (for the enter link) and PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK (for the exit link). If you do not know how to refer to the user Joomla Manual!</p>"
 	
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_JQUERY = "<h4>jQuery calling</h4>
-	<p>Chargement de jQuery. Cette fonction vous permet de désactiver le chargement de jQuery.<br />
-	ATTENTION : que ce soit en mode 'modal' ou en mode 'redirection', le framework javascript jQuery doit être impérativement chargé, sans quoi le plugin ne sera pas fonctionnel. Vous pouvez désactivez le chargement de jQuery si vous appelez le framework par vos propres moyens.<br />
-	<u>Pour infos :</u> 
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_JQUERY = "<h4>Call jQuery</h4>
+	<p>Loading jQuery. This function allows you to disable the loading of jQuery.<br />
+	CAUTION: Wether you use 'popup, or redirection', the jQuery javascript framework must be loaded, otherwise the plugin will not be functional. You can disable the loading of jQuery framework if you call on your own.<br />
+	<u>For info :</u> 
 	<br />
-	- le script de MO'JoomDisclaimer est appelé en bas de page avant '/body>';<br />
-	- le plugin utilise la méthode de l'API de Joomla! pour charger jQuery, ce qui signifie qu'il y aura pas de chargement en double ou conflit avec une autre extenion;
+	- The MO'JoomDisclaimer script is called bottom of the page before '/body>';<br />
+	- The plugin uses the Joomla! API method to load jQuery, which means that there will be no loading duplicate or conflicts with another extenion;
 	</p>"
 	
-PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_CONTACT = "<h4>Contact & Support</h4><p>Pour toutes demandes d'adaptation ou personnalisation du plugin, ou pour toutes autres demandes de prestation, merci de me contacter par email à l'adresse : <a href="mailto:contact@mo-web-creation.com">contact@mo-web-creation.com</a>.</p><p>Pour toutes demandes de support, merci d'utiliser exclusivement le répertoire Github de l'extension : <a href="https://github.com/MOWebCreation/Joomla-MOJoomDisclaimer">https://github.com/MOWebCreation/Joomla-MOJoomDisclaimer</a>. Toutes les demandes de support transmises en dehors de ce context seront ignorées, merci de votre compréhension."
+PLG_SYSTEM_MOJOOMDISCLAIMER_COVER_CONTACT = "<h4>Contact & Support</h4><p>For all requests for adaptation or customization of the plugin, or for any other suggestions, please contact me by email at : <a href="mailto:contact@mo-web-creation.com">contact@mo-web-creation.com</a>.</p><p>For all support requests, please use only the Github extension directory : <a href="https://github.com/MOWebCreation/Joomla-MOJoomDisclaimer">https://github.com/MOWebCreation/Joomla-MOJoomDisclaimer</a>. All support requests sent by other means will be ignored, thank you for your understanding."
 
-PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK = "Enter on the webiste"
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK = "Leave the website"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK = "Enter site"
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK = "Quit"
 
 PLG_SYSTEM_MOJOOMDISCLAIMER_NO = "No"
 PLG_SYSTEM_MOJOOMDISCLAIMER_YES = "Yes"
-PLG_SYSTEM_MOJOOMDISCLAIMER_PARAMS = "Plugin main params"
-PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_LABEL = "Disclaimer content"
-PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_DESC = "Use the following editor for define the content of the disclaimer."
-PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_LABEL = "jQuery loading"
-PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_DESC = "If this function is disabled jQuery will not be loaded by the plugin."
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_LABEL = "Display type"
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_DESC = "Define if the content is displayed in a modal box or if the user is reidrected on another page."
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_MODAL = "Disclaimer loaded in modal box"
-PLG_SYSTEM_MOJOOMDISCLAIMTYPE_REDIRECT = "User redirected on disclaimer page"
+PLG_SYSTEM_MOJOOMDISCLAIMER_PARAMS = "Plugin Settings"
+PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_LABEL = "Disclaimer Content"
+PLG_SYSTEM_MOJOOMDISCLAIMER_CONTENT_DESC = "Use the editor below to define the contents of the disclaimer."
+PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_LABEL = "Call jQuery"
+PLG_SYSTEM_MOJOOMDISCLAIMER_JQUERY_DESC = "Load jQuery. This function disables the loading of jQuery."
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_LABEL = "Display Type"
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_DESC = "Define if the content is displayed in a modal popup or if the user is redirected to another page."
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_MODAL = "Content displayed in a modal"
+PLG_SYSTEM_MOJOOMDISCLAIMTYPE_REDIRECT = "Redirect user to a disclaimer page"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK_LABEL = "Entry link text"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ENTER_LINK_DESC = "Set the text of the enter site link. Use Joomla! language overrive to make multilingual links."
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK_LABEL = "Quit link text"
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_LINK_DESC = "Set the text of the quit site link. Use Joomla language override! to make multilingual links."
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_LABEL = "Redirect robots"
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_DESC = "If you choose the method of redirection instead of displaying the disclaimer in a modal pop-ip, this feature allows you to disable redirection if the method 'isRobot ()' 'Joomla! API detects a crawler sent by a search engine. Recommended to ensure activation site referencing."  
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_LABEL = "Responsive Layout"
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_DESC = "If this feature is enabled and display type is modal popup, it will be automatically resized to fit the size of the user's screen."
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_LABEL = "Opacity of the overlay of the modal"
+PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_DESC = "If the content is displayed in a modal popup, this field sets the opacity of the layer that lies between the modal popup and page. Set a 100% opacity to hide the page."
+PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_LABEL = "Disclaimer redirection page"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_DESC = "If you choose to redirect the user to another page instead of displaying the content in modal, select the menu link to which the user is redirected."
+PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_LABEL = "Enter link URL"
+PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_DESC = "By default, the user is redirected to the original page or to another specified page. You can choose to redirect the user to a specific menu links when they click the link to enter."
+PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_SAME = "Redirect to previous page"
+PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_OTHER = "Redirect to another menu link"
+PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_LABEL = "Input link redirect page"
+PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_DESC = "Specific menu links to which the user is redirected if he decides to enter the site. DEFAULT: website home page."
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_LABEL = "Quit link URL"
+PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_DESC = "URL where the user will be redirected if he leaves the site. DEFAULT: www.google.com"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_LABEL = "Assignment..."
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_DESC = "Set menu links affected by the disclaimer"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ALL = "On all pages"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_NONE = "No pages"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ONLYSELECTED = "Only selected links"
+PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_UNSELECTED = "All pages except the selected links"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ASSIGNMENT_EXPAND = "Expand"
+PLG_SYSTEM_MOJOOMDISCLAIMER_ERROR_ASKINK_LINK = "You have not entered the menu link to which the user should be redirected. Use the plugin administration form to set the menu link or view the disclaimer in a modal pop-up."
+PLG_SYSTEM_MOJOOMDISCLAIMER_ERROR_NOT_ACTIVED = "You must activate the plugin in order to configure the features."
 
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_LABEL = "Bots redirect"
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_ROBOTOSEF_DESC = "If you choose the redirect method this functionnality give you the possibility to disable the redirection if Joomla! detect a search engine crawler. Activation advised to ensure good SEO."  
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_LABEL = "Modal responsive"
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_RWD_DESC = "If this feature is enabled and the contents are displayed in a modal popup, it will be automatically resized according to the screen size of the user."
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_LABEL = "Opacity of the modal overlay"
-PLG_SYSTEM_MOJOOMDISCLAIM_MODAL_OVERLAY_DESC = "If the content is displayed in a modal pop-up, this field give you the possibility to define the opacity of the overlay placed between the modal and the page. Define the value at 100% forr hide the page content."
-PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_LABEL = "Disclaimer redirection"
-PLG_SYSTEM_MOJOOMDISCLAIMER_ASKING_URL_DESC = "Si vous choisisez de rediriger l'utilisateur vers une autre page plutôt que d'afficher le contenu dans la modal, sélectionnez le lien de menu vers lequel l'utilisateur sera redirigé."
-PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_LABEL = "URL du lien d'entrée"
-PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_DESC = "Par défaut l'utilisateur est redirigé vers la page sur laquelle il se trouve ou sur la page sur laquelle il est arrivé. Vous pouvez choisir de rediriger l'utilisateur vers un lien de menu spécifique lorsqu'il clique sur le lien d'entrer."
-PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_SAME = "Redirection vers la page d'arrivé"
-PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_REDIRECT_OTHER = "Redirection vers un autre lien de menu"
-PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_LABEL = "Page de redirection lien d'Entrée"
-PLG_SYSTEM_MOJOOMDISCLAIMER_VALIDED_URL_DESC = "Lien de menu spécifique vers lequel l'utilisateur sera redirigé si il décide d'entrer sur le site. PAR DEFAUT : page d'accueil du site."
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_LABEL = "Exiting link URL"
-PLG_SYSTEM_MOJOOMDISCLAIMER_EXIT_URL_DESC = "Adresse URL vers laquelle l'utilisateur sera redirigé si il quitte le site. PAR DEFAUT : www.google.com"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_LABEL = "Assignation to..."
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_DESC = "Définir les liens de menu concernés par le disclaimer"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ALL = "All the pages"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_NONE = "No one page"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_ONLYSELECTED = "Only the selected pages"
-PLG_SYSTEM_MOJOOMDISCLAIM_ASSIGNMENT_SELECT_UNSELECTED = "All pages except selected"
-PLG_SYSTEM_MOJOOMDISCLAIMER_ASSIGNMENT_EXPAND = "Extend"
-PLG_SYSTEM_MOJOOMDISCLAIMER_ERROR_ASKINK_LINK = "Vous n'avez pas renseigné le lien de menu vers lequel l'utilisateur doit être redirigé. Utilisez le formulaire d'administration du plugin pour définir le lien de menu ou affichez le disclaimer dans une pop-up modal."
-PLG_SYSTEM_MOJOOMDISCLAIMER_ERROR_NOT_ACTIVED = "Vous devez activer le plugin afin de pouvoir configurer l'enssemble des fonctionnalités."
-
-COM_PLUGINS_MO_MAIN_PARAMS_FIELDSET_LABEL = "Main params"
-COM_PLUGINS_MO_CONTENT_PARAMS_FIELDSET_LABEL = "Disclaimer content"
-COM_PLUGINS_MO_ASSIGNMENT_PARAMS_FIELDSET_LABEL = "Menu links assignation"
+COM_PLUGINS_MO_MAIN_PARAMS_FIELDSET_LABEL = "General Settings"
+COM_PLUGINS_MO_CONTENT_PARAMS_FIELDSET_LABEL = "Disclaimer Content"
+COM_PLUGINS_MO_ASSIGNMENT_PARAMS_FIELDSET_LABEL = "Menu Link Assignment"
